cmake_minimum_required(VERSION 3.15)
project(algorihtm)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)
add_executable(BZOJ_4520 K_D_Tree/BZOJ_4520.cpp)
add_executable(Home_Work_8 Home_Work/8.cpp)

add_executable(HDU_2402 FFT/HDU_2402.cpp)
add_executable(BZOJ_4337 Merkle_Tree/BZOJ_4337.cpp)
add_executable(POJ_2104 Persistent_Data_Structure/POJ_2104.cpp)
add_executable(P3834 Persistent_Data_Structure/P3834.cpp)
add_executable(BZOJ_4196 TREE_CHAIN_SPLIT/BZOJ_4196.cpp)
add_executable(BZOJ_2243 TREE_CHAIN_SPLIT/BZOJ_2243.cpp TREE_CHAIN_SPLIT/LOJ139139.cpp)
add_executable(testt TREE_CS/5415.cpp)
add_executable(Qtree1 TREE_CHAIN_SPLIT/Qtree01.cpp)
add_executable(HAOI_2015_2 TREE_CHAIN_SPLIT/HAOI_2015_2.cpp)
add_executable(HAOI_2015 TREE_CHAIN_SPLIT/HAOI2015.cpp)
add_executable(loj_139_3 TREE_CHAIN_SPLIT/Loj_139_3.cpp)
add_executable(LOJ_139_2 TREE_CHAIN_SPLIT/loj_139_TCS2.cpp)
add_executable(demo Dynamic_Tree_Divide/demo.cpp)
add_executable(demo2 Dynamic_Tree_Divide/demo2.cpp)
add_executable(a gb2020/a.cpp )
add_executable(LOJ139139 TREE_CHAIN_SPLIT/LOJ139139.cpp)
add_executable(LOJ_139_TCS2_CPP TREE_CHAIN_SPLIT/LOJ_139_TCS2.cpp)
add_executable(b gb2020/b.cpp)
add_executable(bzoj2049 Link_Cut_Tree/BZOJ_2049.cpp)
